--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+seetaface-recognizer (1.0.0.2-1+dde) unstable; urgency=medium
+
+  * Fix conflict files with seetaface-boxes
+
+ -- chenlinxuan <chenlinxuan@uniontech.com>  Sat, 11 Dec 2021 13:52:52 +0800
+
 seetaface-recognizer (1.0.0.1-1+dde) unstable; urgency=medium
 
   * Fix build issue
